--- a/Terminale/index.html
+++ b/Terminale/index.html
@@ -80,6 +80,7 @@
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Cours-S08-Stats.pdf">Cours-S08-Stats.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Cour-Statistique-a-deux-variables.pdf">Cour-Statistique-a-deux-variables.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/DS-1-S08-Stats.pdf">DS-1-S08-Stats.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/DS-2-S08-Stats.pdf">DS-2-S08-Stats.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-1a-S08-Rappels.pdf">Ex-1a-S08-Rappels.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-1-S08-Rappels_01.pdf">Ex-1-S08-Rappels_01.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-1-S08-Rappels_02.pdf">Ex-1-S08-Rappels_02.pdf</a><br>
