--- a/Premiere/index.html
+++ b/Premiere/index.html
@@ -86,10 +86,12 @@
 	│   ├── <a href="././S05-Suites/Ex-4a-S05-Somme-Arithm%FFFFFFC3%FFFFFFA9tique.pdf">Ex-4a-S05-Somme-Arithmétique.pdf</a><br>
 	│   ├── <a href="././S05-Suites/Ex-4b-S05-Somme-G%FFFFFFC3%FFFFFFA9om%FFFFFFC3%FFFFFFA9trique.pdf">Ex-4b-S05-Somme-Géométrique.pdf</a><br>
 	│   └── <a href="././S05-Suites/Ex-5a-S05-Probl%FFFFFFC3%FFFFFFA8mes.pdf">Ex-5a-S05-Problèmes.pdf</a><br>
-	└── <a href="././S06-Produit-Scalaire/">S06-Produit-Scalaire</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Produit-Scalaire/ChingMath-1re-produit-scalaire.pdf">ChingMath-1re-produit-scalaire.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S06-Produit-Scalaire/Ex-1a-S06-Rappels-Vecteurs.pdf">Ex-1a-S06-Rappels-Vecteurs.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S06-Produit-Scalaire/Ex-2a-S06-Produit-Scalaire-Simple.pdf">Ex-2a-S06-Produit-Scalaire-Simple.pdf</a><br>
+	├── <a href="././S06-Produit-Scalaire/">S06-Produit-Scalaire</a><br>
+	│   ├── <a href="././S06-Produit-Scalaire/ChingMath-1re-produit-scalaire.pdf">ChingMath-1re-produit-scalaire.pdf</a><br>
+	│   ├── <a href="././S06-Produit-Scalaire/Ex-1a-S06-Rappels-Vecteurs.pdf">Ex-1a-S06-Rappels-Vecteurs.pdf</a><br>
+	│   └── <a href="././S06-Produit-Scalaire/Ex-2a-S06-Produit-Scalaire-Simple.pdf">Ex-2a-S06-Produit-Scalaire-Simple.pdf</a><br>
+	└── <a href="././S07-Second-Degre-II/">S07-Second-Degre-II</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S07-Second-Degre-II/Cours-Second-Degre-II.pdf">Cours-Second-Degre-II.pdf</a><br>
 	<hr>
 </body>
 </html>
