--- a/Terminale/index.html
+++ b/Terminale/index.html
@@ -77,10 +77,9 @@
 	├── <a href="././S07-Primitive-Int%FFFFFFC3%FFFFFFA9gration/">S07-Primitive-Intégration</a><br>
 	│   └── <a href="././S07-Primitive-Int%FFFFFFC3%FFFFFFA9gration/resume_cours_primitives_integration.pdf">resume_cours_primitives_integration.pdf</a><br>
 	└── <a href="././S08-Statistiques/">S08-Statistiques</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/DS/">DS</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Cours-S08-Stats.pdf">Cours-S08-Stats.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Cour-Statistique-a-deux-variables.pdf">Cour-Statistique-a-deux-variables.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/DS-1-S08-Stats.pdf">DS-1-S08-Stats.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/DS-2-S08-Stats.pdf">DS-2-S08-Stats.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-1a-S08-Rappels.pdf">Ex-1a-S08-Rappels.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-1-S08-Rappels_01.pdf">Ex-1-S08-Rappels_01.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-1-S08-Rappels_02.pdf">Ex-1-S08-Rappels_02.pdf</a><br>
@@ -89,9 +88,9 @@
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-2a-S08-Point-moyen_01.pdf">Ex-2a-S08-Point-moyen_01.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-2a-S08-Point-moyen_02.pdf">Ex-2a-S08-Point-moyen_02.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-2a-S08-Point-moyen.pdf">Ex-2a-S08-Point-moyen.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/%23Ex-2a-S08-Point-moyen.tex%23">#Ex-2a-S08-Point-moyen.tex#</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-3a-S08-Covariance.pdf">Ex-3a-S08-Covariance.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-3b-S08-Variance-ecart-type.pdf">Ex-3b-S08-Variance-ecart-type.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Ex-4a-S08-Regression.pdf">Ex-4a-S08-Regression.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S08-Statistiques/Exercice-Stats-2-variables-01.pdf">Exercice-Stats-2-variables-01.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; └── <a href="././S08-Statistiques/Exercice-Stats-2-variables-02.pdf">Exercice-Stats-2-variables-02.pdf</a><br>
 	<hr>
