--- a/Premiere/index.html
+++ b/Premiere/index.html
@@ -91,7 +91,11 @@
 	│   ├── <a href="././S06-Produit-Scalaire/Ex-1a-S06-Rappels-Vecteurs.pdf">Ex-1a-S06-Rappels-Vecteurs.pdf</a><br>
 	│   └── <a href="././S06-Produit-Scalaire/Ex-2a-S06-Produit-Scalaire-Simple.pdf">Ex-2a-S06-Produit-Scalaire-Simple.pdf</a><br>
 	└── <a href="././S07-Second-Degre-II/">S07-Second-Degre-II</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S07-Second-Degre-II/Cours-Second-Degre-II.pdf">Cours-Second-Degre-II.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Second-Degre-II/12.FA-02-S04-Discriminant.pdf">12.FA-02-S04-Discriminant.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Second-Degre-II/13.FA-03-S04-Tableaux-variations-affines.pdf">13.FA-03-S04-Tableaux-variations-affines.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Second-Degre-II/14.FA-04-S04-Tableaux-variations-polynome.pdf">14.FA-04-S04-Tableaux-variations-polynome.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Second-Degre-II/Cours-Second-Degre-II.pdf">Cours-Second-Degre-II.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S07-Second-Degre-II/Ex-2a-S07-Signe.pdf">Ex-2a-S07-Signe.pdf</a><br>
 	<hr>
 </body>
 </html>
