--- a/Premiere/index.html
+++ b/Premiere/index.html
@@ -95,6 +95,8 @@
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Second-Degre-II/13.FA-03-S04-Tableaux-variations-affines.pdf">13.FA-03-S04-Tableaux-variations-affines.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Second-Degre-II/14.FA-04-S04-Tableaux-variations-polynome.pdf">14.FA-04-S04-Tableaux-variations-polynome.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Second-Degre-II/Cours-Second-Degre-II.pdf">Cours-Second-Degre-II.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Second-Degre-II/DS-1-S07-Second-degre.pdf">DS-1-S07-Second-degre.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Second-Degre-II/DS-2-S07-Second-degre.pdf">DS-2-S07-Second-degre.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Second-Degre-II/Ex-2a-S07-Signe.pdf">Ex-2a-S07-Signe.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Second-Degre-II/Ex-3a-S07-Inequation.pdf">Ex-3a-S07-Inequation.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S07-Second-Degre-II/Ex-4a-S07-problemes.pdf">Ex-4a-S07-problemes.pdf</a><br>
